# game-dev-projects

project-1/src/: main.cpp
project-2/: .README.md.swp  Makefile
project-2/src/: Common.h  Components.h  Entity.h  EntityManager.cpp  EntityManager.h  Vec2.cpp  Vec2.h  main.cpp
project-test/: CMakeLists.txt  main.cpp
